# pyramid_celery_sqla

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  development.ini  devenv.nix  pyproject.toml
pyramid_celery_sqla/: __init__.py
