[tool.poetry]
name = "pyramid-celery-sqla"
version = "0.1.0"
description = ""
authors = ["Gasper Vozel <gv@niteo.co>"]
readme = "README.md"
packages = [{include = "pyramid_celery_sqla"}]

[tool.poetry.plugins."paste.app_factory"]
main = "pyramid_celery_sqla:main"
test_suite = "pyramid_celery_sqla"

[tool.poetry.dependencies]
python = "3.9.15"
pyramid = "1.9.2"
pyramid-celery = "^4.0.0"
redis = "3.2.0"
celery = "4.4.7"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pyramid-debugtoolbar = "^4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
